crates/ty_python_semantic/resources/mdtest/snapshots/liskov.md_-_The_Liskov_Substitut…_-_Edge_case___function_…_(c8756a54d1cb8499).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: liskov.md - The Liskov Substitution Principle - Edge case: function defined in another module and then assigned in a class body
mdtest path: crates/ty_python_semantic/resources/mdtest/liskov.md
---

# Python source files

## foo.pyi

```
1 | def x(self, y: str): ...
```

## bar.pyi

```
1 | import foo
2 | 
3 | class A:
4 |     def x(self, y: int): ...
5 | 
6 | class B(A):
7 |     x = foo.x  # error: [invalid-method-override]
```

# Diagnostics

```
error[invalid-method-override]: Invalid override of method `x`
 --> src/bar.pyi:4:9
  |
3 | class A:
4 |     def x(self, y: int): ...
  |         --------------- `A.x` defined here
5 |
6 | class B(A):
7 |     x = foo.x  # error: [invalid-method-override]
  |     ^ Definition is incompatible with `A.x`
  |
info: This violates the Liskov Substitution Principle
info: rule `invalid-method-override` is enabled by default

```
